initial conversion to records - #3