@@ -18,6 +18,7 @@ import org.apereo.cas.util.LoggingUtils;
 import org.apereo.cas.util.function.FunctionUtils;
 
 import lombok.Getter;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
 import org.apache.commons.lang3.StringUtils;
@@ -43,9 +44,15 @@ import java.util.stream.Collectors;
  * @since 5.0.0
  */
 @Slf4j
-public record DefaultAuthenticationManager(AuthenticationEventExecutionPlan authenticationEventExecutionPlan,
-                                           boolean principalResolutionFailureFatal,
-                                           ConfigurableApplicationContext applicationContext) implements AuthenticationManager {
+@RequiredArgsConstructor
+@Getter
+public class DefaultAuthenticationManager implements AuthenticationManager {
+
+    private final AuthenticationEventExecutionPlan authenticationEventExecutionPlan;
+
+    private final boolean principalResolutionFailureFatal;
+
+    private final ConfigurableApplicationContext applicationContext;
 
     @Override
     @Audit(
@@ -84,8 +91,8 @@ public record DefaultAuthenticationManager(AuthenticationEventExecutionPlan auth
      * @param builder     the builder
      * @param transaction the transaction
      */
-    private void invokeAuthenticationPostProcessors(final AuthenticationBuilder builder,
-                                                    final AuthenticationTransaction transaction) {
+    protected void invokeAuthenticationPostProcessors(final AuthenticationBuilder builder,
+                                                      final AuthenticationTransaction transaction) {
         LOGGER.debug("Invoking authentication post processors for authentication transaction");
         val pops = authenticationEventExecutionPlan.getAuthenticationPostProcessors(transaction);
         pops.stream()
@@ -101,8 +108,8 @@ public record DefaultAuthenticationManager(AuthenticationEventExecutionPlan auth
      * @param builder     the builder
      * @param transaction the transaction
      */
-    private void populateAuthenticationMetadataAttributes(final AuthenticationBuilder builder,
-                                                          final AuthenticationTransaction transaction) {
+    protected void populateAuthenticationMetadataAttributes(final AuthenticationBuilder builder,
+                                                            final AuthenticationTransaction transaction) {
         LOGGER.debug("Invoking authentication metadata populators for authentication transaction");
         val pops = getAuthenticationMetadataPopulatorsForTransaction(transaction);
         pops.forEach(populator -> transaction.getCredentials()
@@ -117,8 +124,8 @@ public record DefaultAuthenticationManager(AuthenticationEventExecutionPlan auth
      * @param builder        the builder
      * @param authentication the authentication
      */
-    private static void addAuthenticationMethodAttribute(final AuthenticationBuilder builder,
-                                                         final Authentication authentication) {
+    protected void addAuthenticationMethodAttribute(final AuthenticationBuilder builder,
+                                                    final Authentication authentication) {
         authentication.getSuccesses().values()
             .forEach(result -> builder.addAttribute(AUTHENTICATION_METHOD_ATTRIBUTE, result.getHandlerName()));
     }
@@ -132,8 +139,8 @@ public record DefaultAuthenticationManager(AuthenticationEventExecutionPlan auth
      * @param principal  the current authenticated principal from a handler, if any.
      * @return the principal
      */
-    private Principal resolvePrincipal(final AuthenticationHandler handler, final PrincipalResolver resolver,
-                                       final Credential credential, final Principal principal) {
+    protected Principal resolvePrincipal(final AuthenticationHandler handler, final PrincipalResolver resolver,
+                                         final Credential credential, final Principal principal) {
         if (resolver.supports(credential)) {
             try {
                 val p = resolver.resolve(credential, Optional.ofNullable(principal), Optional.ofNullable(handler));
@@ -156,14 +163,15 @@ public record DefaultAuthenticationManager(AuthenticationEventExecutionPlan auth
      * @param transaction the transaction
      * @return true/false
      */
-    private boolean invokeAuthenticationPreProcessors(final AuthenticationTransaction transaction) {
+    protected boolean invokeAuthenticationPreProcessors(final AuthenticationTransaction transaction) {
         LOGGER.trace("Invoking authentication pre processors for authentication transaction");
         val pops = authenticationEventExecutionPlan.getAuthenticationPreProcessors(transaction);
 
         val supported = pops.stream()
             .filter(processor -> transaction.getCredentials()
                 .stream()
-                .anyMatch(processor::supports)).toList();
+                .anyMatch(processor::supports))
+            .collect(Collectors.toList());
 
         var processed = true;
         val it = supported.iterator();
@@ -174,11 +182,11 @@ public record DefaultAuthenticationManager(AuthenticationEventExecutionPlan auth
         return processed;
     }
 
-    private void authenticateAndResolvePrincipal(final AuthenticationBuilder builder,
-                                                 final Credential credential,
-                                                 final PrincipalResolver resolver,
-                                                 final AuthenticationHandler handler,
-                                                 final Service service) throws GeneralSecurityException, PreventedException {
+    protected void authenticateAndResolvePrincipal(final AuthenticationBuilder builder,
+                                                   final Credential credential,
+                                                   final PrincipalResolver resolver,
+                                                   final AuthenticationHandler handler,
+                                                   final Service service) throws GeneralSecurityException, PreventedException {
 
         publishEvent(new CasAuthenticationTransactionStartedEvent(this, credential));
 
@@ -219,8 +227,8 @@ public record DefaultAuthenticationManager(AuthenticationEventExecutionPlan auth
      * @param transaction the transaction
      * @return the principal resolver linked to handler if any, or null.
      */
-    private PrincipalResolver getPrincipalResolverLinkedToHandlerIfAny(final AuthenticationHandler handler,
-                                                                       final AuthenticationTransaction transaction) {
+    protected PrincipalResolver getPrincipalResolverLinkedToHandlerIfAny(final AuthenticationHandler handler,
+                                                                         final AuthenticationTransaction transaction) {
         return this.authenticationEventExecutionPlan.getPrincipalResolver(handler, transaction);
     }
 
@@ -230,7 +238,7 @@ public record DefaultAuthenticationManager(AuthenticationEventExecutionPlan auth
      * @param transaction the transaction
      * @return the authentication metadata populators for transaction
      */
-    private Collection<AuthenticationMetaDataPopulator> getAuthenticationMetadataPopulatorsForTransaction(
+    protected Collection<AuthenticationMetaDataPopulator> getAuthenticationMetadataPopulatorsForTransaction(
         final AuthenticationTransaction transaction) {
         return this.authenticationEventExecutionPlan.getAuthenticationMetadataPopulators(transaction);
     }
@@ -240,7 +248,7 @@ public record DefaultAuthenticationManager(AuthenticationEventExecutionPlan auth
      *
      * @param event the event
      */
-    private void publishEvent(final ApplicationEvent event) {
+    protected void publishEvent(final ApplicationEvent event) {
         if (applicationContext != null) {
             applicationContext.publishEvent(event);
         }
@@ -253,7 +261,7 @@ public record DefaultAuthenticationManager(AuthenticationEventExecutionPlan auth
      * @return the authentication builder
      * @throws AuthenticationException the authentication exception
      */
-    private AuthenticationBuilder authenticateInternal(final AuthenticationTransaction transaction) throws AuthenticationException {
+    protected AuthenticationBuilder authenticateInternal(final AuthenticationTransaction transaction) throws AuthenticationException {
         val credentials = transaction.getCredentials();
         LOGGER.debug("Authentication credentials provided for this transaction are [{}]", credentials);
 
@@ -324,9 +332,9 @@ public record DefaultAuthenticationManager(AuthenticationEventExecutionPlan auth
      * @param authenticationHandlers the authentication handlers
      * @throws AuthenticationException the authentication exception
      */
-    private void evaluateFinalAuthentication(final AuthenticationBuilder builder,
-                                             final AuthenticationTransaction transaction,
-                                             final Set<AuthenticationHandler> authenticationHandlers) throws AuthenticationException {
+    protected void evaluateFinalAuthentication(final AuthenticationBuilder builder,
+                                               final AuthenticationTransaction transaction,
+                                               final Set<AuthenticationHandler> authenticationHandlers) throws AuthenticationException {
         if (builder.getSuccesses().isEmpty()) {
             publishEvent(new CasAuthenticationTransactionFailureEvent(this, builder.getFailures(), transaction.getCredentials()));
             throw new AuthenticationException(builder.getFailures(), builder.getSuccesses());
@@ -349,10 +357,9 @@ public record DefaultAuthenticationManager(AuthenticationEventExecutionPlan auth
      * @param authenticationHandlers the authentication handlers
      * @return true /false
      */
-    private ChainingAuthenticationPolicyExecutionResult evaluateAuthenticationPolicies(
-        final Authentication authentication,
-        final AuthenticationTransaction transaction,
-        final Set<AuthenticationHandler> authenticationHandlers) {
+    protected ChainingAuthenticationPolicyExecutionResult evaluateAuthenticationPolicies(final Authentication authentication,
+                                                                                         final AuthenticationTransaction transaction,
+                                                                                         final Set<AuthenticationHandler> authenticationHandlers) {
         val policies = authenticationEventExecutionPlan.getAuthenticationPolicies(transaction);
         val executionResult = new ChainingAuthenticationPolicyExecutionResult();
 
@@ -361,7 +368,7 @@ public record DefaultAuthenticationManager(AuthenticationEventExecutionPlan auth
         resultBuilder.collect(authentication);
 
         val authenticationSystemSupport = applicationContext.getBean(AuthenticationSystemSupport.BEAN_NAME, AuthenticationSystemSupport.class);
-        val principalElectionStrategy = authenticationSystemSupport.principalElectionStrategy();
+        val principalElectionStrategy = authenticationSystemSupport.getPrincipalElectionStrategy();
         val resultAuthentication = resultBuilder.build(principalElectionStrategy).getAuthentication();
         LOGGER.trace("Final authentication used for authentication policy evaluation is [{}]", resultAuthentication);
 
@@ -397,7 +404,7 @@ public record DefaultAuthenticationManager(AuthenticationEventExecutionPlan auth
      * @param name    the name
      * @param builder the builder
      */
-    private void handleAuthenticationException(final Throwable ex, final String name, final AuthenticationBuilder builder) {
+    protected void handleAuthenticationException(final Throwable ex, final String name, final AuthenticationBuilder builder) {
         LOGGER.trace(ex.getMessage(), ex);
         val msg = new StringBuilder(StringUtils.defaultString(ex.getMessage()));
         if (ex.getCause() != null) {
